# rag-kb-cpp

./: .env.example  .gitignore  2026-03-21-next-prompt.md  AGENT.md  docker-compose.yml  progress.md  readme.md  test_drogon.txt
concepts/open-world-galgame/: README.md  (+4 more)
cpp-gateway/: CMakeLists.txt  Dockerfile
cpp-gateway/src/: main.cc
eval/: README.md  external_sources.md
guidance/: 2026-03-21-next-prompt.md  2026-03-22-cloud-rerank-design.md  2026-03-22-next-prompt.md  2026-03-22-rag-capability-benchmark.md  2026-03-24-next-prompt.md  2026-03-27-reusable-interfaces.md  2026-03-28-dialogue-long-memory-improvement-directions.md  2026-03-28-dialogue-narration-e2e-report.md  2026-03-28-long-memory-architecture.md  2026-03-28-next-prompt.md  2026-03-28-prompt-iteration-next-prompt.md  2026-03-29-assistant-phase-1-implementation.md  2026-03-29-next-prompt.md  2026-03-29-personal-assistant-direction.md  2026-03-29-personal-assistant-task-breakdown.md  README.md
notes/: 2026-03-21-rag.md  2026-03-22-contextual-retrieval-observability.md  2026-03-22-query-planning.md  2026-03-22-routing-rerank.md  2026-03-24-cloud-rerank-rollout.md  2026-03-24-query-hardcase-closure.md  2026-03-28-session-workspace-lifecycle.md  README.md  recall-accuracy-optimization.md
python-ai/: Dockerfile  requirements.txt
scripts/: compare_eval_reports.py  promote_eval_baseline.py  run_eval.py  smoke_test.py  wsl_utf8.ps1
uploads/: long_sample.md  sample.md
web-game/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+86 files in other folders)
